SPORT-39: fix apigw
