# services/api-gateway/internal/infrastructure/bootstrap/app.go
@@ -92,7 +92,7 @@ func New(ctx context.Context, cfg config.Config) (*App, error) {
 	httpMux.Handle("/api/docs/", httpgateway.DocsHandler("/api/openapi/gateway.swagger.json"))
 	httpMux.Handle("/api/openapi/gateway.swagger.json", httpgateway.GatewayOpenAPIHandler(cfg.OpenAPI.GatewayFilePath))
 	apiHandler := http.StripPrefix("/api", gatewayHandler)
-	httpMux.Handle("/api/profiles/me/avatar", httpgateway.MultipartAvatarHandler(gatewayService, apiHandler))
+	httpMux.Handle("/api/v1/profiles/me/avatar", httpgateway.MultipartAvatarHandler(gatewayService, apiHandler))
 	httpMux.Handle("/api/", apiHandler)
 
 	httpServer := &http.Server{
